# ck-trading-system

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/: coding.md
.github/workflows/: ai-share-monitor.yml  att-monitor.yml  intc-monitor.yml  nflx-monitor.yml  nvda-monitor.yml
data/Earning/: 2Q26_ATT_Earnings_Call_Notes.md  ATT_2Q26_Trending_Schedule.xlsx  GOOGL-Q2-2026-Earnings-Release-ex991.html  INTC-Q2-2026-Earnings-Call-Notes.md  INTC-Q2-2026-Earnings-Release-ex991.html  Q2-26-Website-Financials.xlsx  TSLA-Q2-2026-Earnings-Call-Notes.md  TSLA-Q2-2026-Update-ex991.html
data/monitoring/: alerts.json  checklist.json  openrouter_daily_tokens.parquet  openrouter_pricing_snapshots.parquet  openrouter_weekly_buckets_quarantine.parquet  pkg_downloads.parquet  weekly_bloc_share.parquet
docs/: ai_model_share_monitoring.md  att_spacex_monitoring.md  intc_monitoring.md  intel_analysis_report.md  nflx_monitoring.md  nvda_analysis_report.md  nvda_monitoring.md  signal_semantics.md
scripts/: ai_share_update.py  att_monitor_update.py  backfill_data.py  backtest_buy_the_dip.py  backtest_portfolio_dip.py  backtest_voo_entry_strategies.py  compare_buy_the_dip_to_ops.py  daily_update.py  intc_monitor_update.py  nflx_monitor_update.py  nvda_monitor_update.py  seed_universe.py  train_rl.py  update_all_prices.py  visualize_rl.py  xgboost_demo.py  xgboost_demo_viz.py
src/ck_trading/: __init__.py  config.py
tests/: conftest.py  test_config.py
tests/test_backtesting/: test_benchmark.py  test_engine.py  test_metrics.py  test_portfolio_sim.py
(+190 files in other folders)
