[project]
name = "ck-trading-system"
version = "0.1.0"
description = "Quantitative value investing system for US and HK stocks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "polars>=1.0",
    "duckdb>=1.1",
    "yfinance>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "apprise>=1.8",
    "streamlit>=1.38",
    "plotly>=5.22",
    "pyarrow>=17.0",
    "fredapi>=0.5",
    "httpx>=0.27",
    "gymnasium>=1.0",
    "stable-baselines3>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1",
    "ipykernel>=6.29",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "N999", "SIM108", "SIM102"]  # B008: FastAPI Depends; N999: Streamlit page names; SIM: readability preference

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/ck_trading"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
